[package]
name = "yake-wasm"
version = "0.1.1"
edition = "2021"
authors = ["Kyle Fahey <kyle.c.r.fahey@gmail.com>"]
description = "Yake (Yet Another Keyword Extractor) in Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
streaming-stats = "0.1.28"
contractions = "0.5.4"
unicode-segmentation = "1.9.0"
natural = "0.3.0"
wasm-bindgen = "0.2"
js-sys = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[lib]
crate-type = ["cdylib"]
bench = false
path = "src/lib.rs" 

[profile.release]
opt-level = 's'